# AIScan

./: .gitignore  LICENCE.md  README.md  pyproject.toml
src/aiscan/: cli.py  metadata.py  scanner.py
